GPU subdivision modifier: Smooth Shade doesn't work #96915

Closed
opened 2022-03-31 08:56:13 +02:00 by Hajime Sakuma · 11 comments

System Information
Operating system: Windows10
Graphics card: NVIDIA GeForce GTX 1050 Ti

Blender Version
Broken: 3.1.1(stable)
Worked: 3.1.0

Short description of error
When SDS modifier is added, Smooth Shade doesn't work and looks same as Flat Shade.

Exact steps for others to reproduce the error
Add a mesh and add SDS modifier. Check "Smooth Shade" in object mode.SnapCrab_NoName_2022-3-31_15-27-22_No-00.png

**System Information** Operating system: Windows10 Graphics card: NVIDIA GeForce GTX 1050 Ti **Blender Version** Broken: 3.1.1(stable) Worked: 3.1.0 **Short description of error** When SDS modifier is added, Smooth Shade doesn't work and looks same as Flat Shade. **Exact steps for others to reproduce the error** Add a mesh and add SDS modifier. Check "Smooth Shade" in object mode.![SnapCrab_NoName_2022-3-31_15-27-22_No-00.png](https://archive.blender.org/developer/F12958957/SnapCrab_NoName_2022-3-31_15-27-22_No-00.png)
Author

Added subscriber: @hsakuyama

Added subscriber: @hsakuyama

#96914 was marked as duplicate of this issue

#96914 was marked as duplicate of this issue

#96913 was marked as duplicate of this issue

#96913 was marked as duplicate of this issue
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Added subscribers: @kevindietrich, @lichtwerk

Added subscribers: @kevindietrich, @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm.

CC @kevindietrich

Can confirm. CC @kevindietrich
Philipp Oeser changed title from Smooth Shade doesn't work when SDS modifier is added to GPU subdivision modifier: Smooth Shade doesn't work 2022-03-31 11:06:49 +02:00

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges

This issue was referenced by a28d6a7b56

This issue was referenced by a28d6a7b564a434dfa0610a65bf93569e3ccebd6

This issue was referenced by dc73c71b3b

This issue was referenced by dc73c71b3b9b84663bc2ad7c15a890f509f27d83

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Kévin Dietrich self-assigned this 2022-03-31 11:54:05 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#96915
No description provided.