Fix T96915: GPU subdivision modifier: Smooth Shade doesn't work

Simple error in an earlier commit, the flags should be or-ed.